# RMUASD

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  README.md  deploy.sh  deploy_latest.sh  docker-compose.yml  mavros_clean.launch  pull_image.sh  run.sh  start.sh  start_uasd_sim  test.sh
setup/: drone_opkg_list  onboard-control.service  pingd@.service
setup/ppp/: connect-errors  options-mobile
setup/ppp/chatscripts/: mobile-modem.chat
setup/ppp/peers/: provider  reset_modem.sh
setup/ppp/ppp/: connect-errors  options  options-mobile
setup/ppp/ppp/chatscripts/: mobile-modem.chat
setup/ppp/ppp/peers/: mobile_noauth
setup/udev/rules.d/: 98-gps-serial.rules  99-gsm-serial.rules
simulation/: Dockerfile  run.sh
software/drone_sw/: CMakeToolchainFile.txt  Dockerfile
software/drone_sw/Cpp/: CMakeLists.txt
software/drone_sw/Cpp/testapp/headers/: msr145_tool.hpp  options_handler.hpp
software/drone_sw/arduino/: Makefile
software/drone_sw/arduino/source/: main.cpp
software/drone_sw/python/: dronkitpx4.py
software/drone_sw/python/OnBoardControll/: Dockerfile  main.py  requirements.txt  run.sh
software/drone_sw/python/OnBoardControll/DroneControl/: DroneControl.py  dronkitpx4.py
software/drone_sw/python/OnBoardControll/GPSHandler/: GPSHandler.py  GPSMonitor.py
software/drone_sw/python/OnBoardControll/GeoFenceChecker/: GeoFenceChecker.py
software/drone_sw/python/OnBoardControll/LEDControl/: LEDControl.py
software/drone_sw/python/OnBoardControll/NetworkMonitor/: ConnectionMonitor.py  NetworkMonitor.py
software/drone_sw/python/OnBoardControll/RMQHandler/: DroneConsumer.py
software/drone_sw/python/OnBoardControll/RMQHandler/DroneConsumer/: DroneConsumer.py  __init__.py
software/drone_sw/python/OnBoardControll/RMQHandler/DroneProducer/: DroneProducer.py  __init__.py
software/drone_sw/python/OnBoardControll/SerialMonitor/: SerialMonitor.py
software/drone_sw/python/OnBoardControll/gpioControl/: gpioControl.py
software/drone_sw/python/gpioControl/: gpioControl.py
software/drone_sw/testapp/: CMakeLists.txt
software/drone_sw/testapp/sources/: CMakeLists.txt  helloworld.cpp
software/drone_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
software/drone_ws/src/aed_drone_logic/: CMakeLists.txt  package.xml
software/gcs_ws/: Dockerfile  install_geographiclib_datasets.sh  requirements.txt  run_with_mavros.sh  start_uasd_sim
software/gcs_ws/src/aed_gcs_logic/: CMakeLists.txt  package.xml  setup.py
software/gcs_ws/src/aed_gcs_logic/include/aed_gcs_logic/: drone_logic.h  path_planner.cpp  path_planner.h
software/gcs_ws/src/aed_gcs_logic/launch/: gcs.launch
software/gcs_ws/src/aed_gcs_logic/msg/: waypoints.msg
software/gcs_ws/src/aed_gcs_logic/resources/: NEW_model_airfield.fence  NEW_model_airfield.rally  NEW_model_airfield_inner.fence  OLD_model_airfield.fence  OLD_model_airfield_inner.fence  airport.fence  airport_new.fence  airport_rally.rally  geofence.csv  geofence2.csv  landingspots.csv  model_airfield.fence  model_airfield.rally  model_airfield_inner.fence  polygon_fence.fence  polygon_inner_fence.fence  testrally.rally
software/gcs_ws/src/aed_gcs_logic/resources/fences_testday/: airport_inner_BIG.fence  airport_inner_BIG.rally  airport_inner_BIG_adjusted.fence  airport_inner_BIG_horseshoe.fence  airport_inner_BIG_horseshoe.rally  airport_outer_BIG.fence
software/gcs_ws/src/aed_gcs_logic/src/: Drone.py  GeofenceChecker.py  GeofenceSender.py  airport_inner.fence  control_logic_node.cpp  controllogic.cpp  docking_station_dummy.py  drone_logic.cpp  geofence.csv  health_check_node.cpp  link_monitor_node.py  listener.cpp  location_faker.py  mission_handler.py  mission_test.py  path_planner.cpp  path_planner.py  path_planner_dummy.py  path_planner_node.cpp  risk_assessment.py
software/gcs_ws/src/aed_gcs_logic/srv/: AbortRequest  AbortRequest.srv  HealthCheckService.srv  OnboardStatus.srv  SendMission.srv  mission_request.srv
software/gcs_ws/src/ros_rabbitmq_bridge/: CMakeLists.txt  package.xml  setup.py
software/gcs_ws/src/ros_rabbitmq_bridge/msg/: mission_request.msg  userinfo.msg
software/gcs_ws/src/ros_rabbitmq_bridge/scripts/: emitting.py  rabbitmq_bridge.py  rabbitmq_classes.py
software/gcs_ws/src/ublox_sara_g3_interface/: CMakeLists.txt  package.xml  setup.py
software/gcs_ws/src/ublox_sara_g3_interface/launch/: ublox_sara_g3_example.launch
software/gcs_ws/src/ublox_sara_g3_interface/scripts/: ublox_sara_g3_node.py
tests/: Readme.md  TELEM2_failure_test.sh  common.sh  gcs_failure_test.sh  normal_operation_test.sh  oes_failure_test.sh  run_system_test.sh  start_containers.sh  webapp_unit_test.sh
tests/Tools/: GetLocation.py  MissionMonitor.py  requirements.txt  start_mission.py
